--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Recotto</title>
   <link href="sandbox.css" rel="stylesheet">
   <link href="../dist/css/animsition.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="example.css">
+  <link rel="stylesheet" type="text/css" href="css/example.css">
   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
 </head>
 <body>
