--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="../dist/css/animsition.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="example.css">
   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
   <div class="animsition">
@@ -20,7 +21,7 @@
   <p><b>デートコースでお困りのあなた！
     <br>一瞬でデートコースをお作りします！
     <br>↓　さあ早くクリックを！　↓</b></p>
-
+</div>
 <div class="btn">
   <a href="course.html"><span><b>レコる？</b></span></a>
 </div>
