--- a/course.html
+++ b/course.html
@@ -7,10 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sandbox: home - Animsition</title>
   <link href="sandbox.css" rel="stylesheet">
-  <link href="../dist/css/animsition.min.css" rel="stylesheet">
+  <link href="css/animsition.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="example2.css">
 </head>
 <body>
+
   <div class="animsition">
     <script type="text/javascript">
        var imglist = new Array(
@@ -49,12 +50,14 @@
     </script>
   </div>
 
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-  <script src="../dist/js/animsition.min.js" charset="utf-8"></script>
+  <script src="js/animsition.min.js" charset="utf-8"></script>
   <script>
   $(document).ready(function() {
     $('.animsition').animsition();
   });
+
   </script>
 
 </body>
