--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Recotto</title>
-  <link href="sandbox.css" rel="stylesheet">
-  <link href="../dist/css/animsition.min.css" rel="stylesheet">
+  <link href="css/animsition.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="example.css">
   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
+
   <div class="animsition">
     <div class="top_img">
 <img src="1.png">
@@ -20,14 +21,16 @@
   <p><b>デートコースでお困りのあなた！
     <br>一瞬でデートコースをお作りします！
     <br>↓　さあ早くクリックを！　↓</b></p>
-
+</div>
 <div class="btn">
   <a href="course.html"><span><b>レコる？</b></span></a>
 </div>
   </div>
 
+</div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-  <script src="../dist/js/animsition.min.js" charset="utf-8"></script>
+  <script src="js/animsition.min.js" charset="utf-8"></script>
   <script>
   $(document).ready(function() {
     $('.animsition').animsition();
