--- a/course.html
+++ b/course.html
@@ -8,7 +8,7 @@
   <title>Sandbox: home - Animsition</title>
   <link href="sandbox.css" rel="stylesheet">
   <link href="css/animsition.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="example2.css">
+  <link rel="stylesheet" type="text/css" href="css/example2.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
           "slide09.png",
           "slide10.png" );
        var selectnum = Math.floor(Math.random() * imglist.length);
-       var output = "<img src=" + imglist[selectnum] + ">";
+       var output = "<img src=img/" + imglist[selectnum] + ">";
        document.write(output);
     </script>
   </div>
@@ -45,7 +45,7 @@
           "slide09-2.png",
           "slide10-2.png" );
        var selectnum = Math.floor(Math.random() * imglist.length);
-       var output = "<img src=" + imglist[selectnum] + ">";
+       var output = "<img src=img/" + imglist[selectnum] + ">";
        document.write(output);
     </script>
   </div>
