--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </div>
 
 <div class="text">
-  <p><b>デートコースでお困りのあなた！
+  <p><b>デートコースでお困りのあなたのために
     <br>一瞬でデートコースをお作りします！
-    <br>↓　さあ早くクリックを！　↓</b></p>
+    <br>↓ さあレコってみよう！ ↓</b></p>
 </div>
 <div class="btn">
   <a href="course.html"><span><b>レコる？</b></span></a>
